inayos lahat ng sort sa inventory

--- a/static/home_style.css
+++ b/static/home_style.css
@@ -100,7 +100,7 @@ main {
     background-color: white;
     border-radius: 5px;
 }
-.inventory-header {
+.inventory-header, .doorlogs-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -116,40 +116,6 @@ main {
 .button-group .btn {
     padding: 10px 20px;
     border-radius: 5px;
-}
-/* Search bar styling */
-.search-bar {
-    display: flex;
-    align-items: center;
-    position: relative; /* Ensure the icon is positioned correctly */
-    margin-bottom: 20px;
-    margin-left: 10px;
-}
-
-/* Adjusting the width of the search bar */
-.search-bar input {
-    width: 300px; /* Set a default width */
-    max-width: 100%; /* Ensure it doesn't overflow */
-    padding: 10px;
-    border-radius: 20px;
-    border: 1px solid #ced4da;
-    padding-left: 40px; /* Make space for the icon */
-    transition: width 0.3s ease; /* Smooth transition on resize */
-    height: 35px;
-}
-
-.search-bar i {
-    position: absolute;
-    left: 15px; /* Position the icon inside the search bar */
-    color: #6c757d;
-    font-size: 20px;
-}
-
-/* Responsive adjustments */
-@media (max-width: 768px) {
-    .search-bar input {
-        width: 100%; /* Full width on smaller screens */
-    }
 }
 
 
