--- a/templates/doorlogs_table_rows.html
+++ b/templates/doorlogs_table_rows.html
@@ -1,12 +1,14 @@
-{% for item in doorlogs_items %}
+{% for log in door_logs %}
 <tr>
-    <td>{{ item.username }}</td>
-    <td>{{ item.status }}</td>
-    <td>{{ item.time_accessed }}</td>
-    <td>{{ item.date_accessed }}</td>
+    <td>{{ log.username }}</td>
+    <td>{{ log.accountType }}</td>
+    <td>{{ log.position }}</td>
+    <td>{{ log.date }}</td>
+    <td>{{ log.time }}</td>
+    <td>{{ log.action_taken }}</td>
 </tr>
 {% else %}
 <tr>
-    <td colspan="4" class="text-center">No records found</td>  <!-- Message if no results -->
+    <td colspan="6">No logs found</td>
 </tr>
 {% endfor %}
