--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='home_style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/home_style.css') }}">
 </head>
 <body>
     <div class="container-fluid">
@@ -16,7 +16,7 @@
                 <div class="sidebar-content">
 
                     <div class="sidebar-header d-flex align-items-center">
-                        <img src="{{ url_for('static', filename='SanMateoLogo.png') }}" alt="Barangay San Mateo Logo" class="sidebar-logo">
+                        <img src="{{ url_for('static', filename='images/SanMateoLogo.png') }}" alt="Barangay San Mateo Logo" class="sidebar-logo">
                         <h2 class="sidebar-title ms-3">Barangay San Mateo Health Center Medicine Cabinet</h2>
                     </div>
             
@@ -113,7 +113,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{ url_for('static', filename='idleLogout.js') }}"></script>
-    <script src="{{ url_for('static', filename='home.js') }}"></script> <!-- Link to the external home.js -->
+    <script src="{{ url_for('static', filename='scripts/idleLogout.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/home.js') }}"></script> <!-- Link to the external home.js -->
 </body>
 </html>
