--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -6,7 +6,7 @@
     <title>Inventory</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='inventory.css') }}"> <!-- Link to external CSS -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/inventory.css') }}"> <!-- Link to external CSS -->
 </head>
 <body>
     <div>
@@ -26,6 +26,7 @@
                         <button class="btn btn-primary" onclick="sortInventoryByName()">Sort by Name</button>
                         <button class="btn btn-primary" onclick="sortInventoryByType()">Sort by Type</button>
                         <button class="btn btn-primary" onclick="sortInventoryByQuantity()">Sort by Quantity</button>
+                        <button class="btn btn-primary" onclick="sortInventoryByUnit()">Sort by Unit</button>
                         <button class="btn btn-primary" onclick="sortInventoryByDateStored()">Sort by Date Stored</button>
                         <button class="btn btn-primary" onclick="sortInventoryByExpirationDate()">Sort by Expiration Date</button>
                     </div>
@@ -58,6 +59,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{ url_for('static', filename='inventory.js') }}"></script> <!-- Link to external JS -->
+    <script src="{{ url_for('static', filename='scripts/inventory.js') }}"></script> <!-- Link to external JS -->
 </body>
 </html>
