--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login_style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/login_style.css') }}">
 </head>
 <body>
     <div class="container">
@@ -21,7 +21,7 @@
         {% endwith %}
 
         <div class="wrapper">
-            <img src="{{ url_for('static', filename='SanMateoLogo.png') }}" alt="Logo">
+            <img src="{{ url_for('static', filename='images/SanMateoLogo.png') }}" alt="Logo">
             <h1>Login</h1>
             <form method="POST" action="{{ url_for('login') }}">
                 <div class="input-box">
