--- a/templates/doorlogs.html
+++ b/templates/doorlogs.html
@@ -20,6 +20,7 @@
                                 <span class='bx bx-search' style="color: black;"></span>
                             </button>
                         </form>
+                        
                     </div>
 
                     <div class="button-group">
@@ -32,7 +33,7 @@
                     </div>
                 </div>
 
-                <div class="table-responsive" style="max-height: 800px; overflow-y: auto;">
+                <div class="table-responsive" style="max-height: 79vh; overflow-y: auto;">
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -50,8 +51,9 @@
                     </table>
                 </div>
 
-                <div class="button-container">
-                    <button class="btn btn-custom-blue" onclick="refreshDoor()"><i class='bx bx-refresh'></i> Refresh</button>
+                <div class="button-container" style="padding-right: 20px;">
+                    <button class="btn btn-custom-blue" onclick="refreshPage()"><i class='bx bx-refresh'></i> Refresh</button>
+                    <button class="btn btn-primary"><i class='bx bx-download'></i> Extract CSV</button>
                 </div>
             </div>
         </div>
