--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
 
-                <div class="table-responsive" style="max-height: 800px; overflow-y: auto;">
+                <div class="table-responsive" style="max-height: 79vh; overflow-y: auto;">
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -50,7 +50,7 @@
                     </table>
                 </div>
 
-                <div class="button-container">
+                <div class="button-container" style="padding-right: 20px;">
                     <button class="btn btn-custom-blue" onclick="refreshPage()"><i class='bx bx-refresh'></i> Refresh</button>
                     <button class="btn btn-primary"><i class='bx bx-download'></i> Extract CSV</button>
                 </div>
