--- a/static/styles/home_style.css
+++ b/static/styles/home_style.css
@@ -1,5 +1,9 @@
 /* General sidebar and offcanvas styles */
 
+.body {
+    margin-left: 0px;
+    padding-left: 0px;
+}
 
 .sidebar, .offcanvas {
     height: 100vh;
