--- a/templates/doorlogs.html
+++ b/templates/doorlogs.html
@@ -10,21 +10,22 @@
 </head>
 <body>
     <div>
-        <div class="tab-content" id="doorlogs-tabs">
-            <div class="tab-pane fade show active" id="doorlogs" role="tabpanel">
-                <div class="doorlogs-header d-flex justify-content-between align-items-center mb-3">
+        <div class="tab-content" id="inventory-tabs">
+            <div class="tab-pane fade show active" id="inventory" role="tabpanel">
+                <div class="inventory-header d-flex justify-content-between align-items-center mb-3">
                     <div class="search-bar mt-4">
-                        <form method="GET" action="{{ url_for('doorlogs') }}" class="d-flex" onsubmit="searchDoorLogs(event)">
-                            <input type="text" name="search" placeholder="Search here" class="form-control" style="margin: 10px 0 0 10px;">
-                            <button type="submit" class="btn" style="margin: 10px 0 0 -40px; background-color: transparent; color: black; border: none;">
-                                <span class='bx bx-search' style="color: black;"></span>
-                            </button>
-                        </form>
+                            <form method="GET" action="{{ url_for('doorlogs') }}" class="d-flex" onsubmit="searchDoorLogs(event)">
+                                <input type="text" name="search" placeholder="Search here" class="form-control" style="margin: 10px 0 0 10px;">
+                                <button type="submit" class="btn" style="margin: 10px 0 0 -40px; background-color: transparent; color: black; border: none;">
+                                    <span class='bx bx-search' style="color: black;"></span>
+                                </button>
+                            </form>
                         
                     </div>
 
                     <div class="button-group">
-                        <button class="btn btn-primary" onclick="sortDoorLogsByUserName()">Sort by Username</button>
+                        <button class="btn btn-primary" onclick="window.location.href='/doorlogs?sort_by=username'">Sort by Username</button>
+
                         <button class="btn btn-primary" onclick="sortDoorLogsByAccountType()">Sort by Account Type</button>
                         <button class="btn btn-primary" onclick="sortDoorLogsByPosition()">Sort by Position</button>
                         <button class="btn btn-primary" onclick="sortDoorLogsByDate()">Sort by Date</button>
@@ -52,9 +53,10 @@
                 </div>
 
                 <div class="button-container" style="padding-right: 20px;">
-                    <button class="btn btn-custom-blue" onclick="refreshPage()"><i class='bx bx-refresh'></i> Refresh</button>
+                    <button class="btn btn-custom-blue" onclick="refresh()"><i class='bx bx-refresh'></i> Refresh</button>
                     <button class="btn btn-primary"><i class='bx bx-download'></i> Extract CSV</button>
                 </div>
+                
             </div>
         </div>
     </div>
