ui and notification fetch in database

--- a/templates/accounts_table_rows.html
+++ b/templates/accounts_table_rows.html
@@ -1,11 +1,11 @@
-{% for log in users %}
+{% for user in users %}
 <tr>
-    <td>{{ log.username }}</td>
-    <td>{{ log.position }}</td>
-    <td>{{ log.accountType }}</td>
+    <td>{{ user.username }}</td>
+    <td>{{ user.position }}</td>
+    <td>{{ user.accountType }}</td>
 </tr>
 {% else %}
 <tr>
-    <td colspan="3">No logs found</td>
+    <td colspan="3">No users found</td>
 </tr>
 {% endfor %}
