--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div>
-        <div class="tab-content" id="inventory-tabs">
+        <div class="tab-content" id="inventory-tabs" style="font-size: 1.3rem;">
             <div class="tab-pane fade show active" id="medicine" role="tabpanel">
                 <div class="inventory-header d-flex justify-content-between align-items-center mb-3">
                     <div class="search-bar mt-4">
