inaayos yung bug sa extract doorlogs

--- a/templates/doorlogs.html
+++ b/templates/doorlogs.html
@@ -53,8 +53,8 @@
                 </div>
 
                 <div class="button-container" style="padding-right: 20px;">
-                    <button class="btn btn-custom-blue" onclick="refresh()"><i class='bx bx-refresh'></i> Refresh</button>
-                    <button class="btn btn-primary" onclick="extractCSV()"><i class='bx bx-download'></i> Extract</button>
+                    <button class="btn btn-custom-blue" onclick="refreshDoorlogs()"><i class='bx bx-refresh'></i> Refresh</button>
+                    <button class="btn btn-primary" onclick="extractCSVDoorlogs()"><i class='bx bx-download'></i> Extract</button>
 
                 </div>
                 
