--- a/templates/notification.html
+++ b/templates/notification.html
@@ -35,7 +35,7 @@
                 </div>
                 
                 <div class="button-container">
-                    <button class="btn btn-custom-blue" onclick="refreshPage()"><i class='bx bx-refresh'></i> Refresh</button>
+                    <button class="btn btn-custom-blue" onclick="refreshNotification()"><i class='bx bx-refresh'></i> Refresh</button>
                 </div>
             </div>
         </div>
