--- a/templates/home.html
+++ b/templates/home.html
@@ -24,41 +24,41 @@
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link" id="inventory-link" href="javascript:void(0);" 
-                               style="font-size: 2rem; padding: 20px 20px;" 
+                               style="font-size: 1.5rem; padding: 20px 20px;" 
                                onclick="loadContent('inventory', 'inventory-link')">
                                 <i class='bx bx-box'></i>
-                                Inventory
+                                &nbsp;Inventory
                             </a>
                         </li> 
                         <li class="nav-item">
                             <a class="nav-link" id="doorlogs-link" href="javascript:void(0);" 
-                               style="font-size: 2rem; padding: 20px 20px;" 
+                               style="font-size: 1.5rem; padding: 20px 20px;" 
                                onclick="loadContent('doorlogs', 'doorlogs-link')">
                                 <i class='bx bx-door-open'></i>
-                                Door Logs
+                                &nbsp;Door Logs
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="notification-link" href="javascript:void(0);" 
-                               style="font-size: 2rem; padding: 20px 20px;" 
+                               style="font-size: 1.5rem; padding: 20px 20px;" 
                                onclick="loadContent('notification', 'notification-link')">
                                 <i class='bx bx-bell'></i>
-                                Notification
+                                &nbsp;Notification
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="accounts-link" href="javascript:void(0);" 
-                               style="font-size: 2rem; padding: 20px 20px;" 
+                               style="font-size: 1.5rem; padding: 20px 20px;" 
                                onclick="loadContent('accounts', 'accounts-link')">
                                 <i class='bx bx-cog'></i>
-                                Accounts
+                                &nbsp;Accounts
                             </a>
                         </li>
                         <li class="nav-item sidebar-footer">
                             <a class="nav-link text-danger" href="{{ url_for('logout') }}" 
-                               style="font-size: 2rem; padding: 20px 20px;">
+                               style="font-size: 1.5rem; padding: 20px 20px;">
                                 <i class='bx bx-log-out'></i>
-                                Logout
+                                &nbsp;Logout
                             </a>
                         </li>
                     </ul>
