--- a/static/styles/doorlogs.css
+++ b/static/styles/doorlogs.css
@@ -21,6 +21,12 @@
     padding: 20px;
 }
 
+.sort-text {
+    margin-left: 450px; 
+    font-size: 1.2rem;
+    color: white;  
+}
+
 /* Change background color and font color of active tab */
 .nav-tabs .nav-link.active {
     background-color: rgba(66, 167, 245, 1);
